cmake_minimum_required(VERSION 3.12)
include(pico_sdk_import.cmake)
project(ligtsticks_rp2040)
pico_sdk_init()

add_executable(ligtsticks_rp2040 main.c)
target_sources(ligtsticks_rp2040 PRIVATE Leds.c Effect.c Common.c)

file(MAKE_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/generated)
pico_generate_pio_header(ligtsticks_rp2040 ${CMAKE_CURRENT_LIST_DIR}/ws2812.pio OUTPUT_DIR ${CMAKE_CURRENT_LIST_DIR}/generated)
target_link_libraries(ligtsticks_rp2040 pico_stdlib)
target_link_libraries(ligtsticks_rp2040 hardware_watchdog)
target_link_libraries(ligtsticks_rp2040 hardware_pio)
target_link_libraries(ligtsticks_rp2040 hardware_dma)
pico_add_extra_outputs(ligtsticks_rp2040)
pico_enable_stdio_usb(ligtsticks_rp2040 0)
pico_enable_stdio_uart(ligtsticks_rp2040 0)